After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719901 - ClutterStageCogl: Ignore a clip the size of the stage
ClutterStageCogl: Ignore a clip the size of the stage
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-12-05 13:11 UTC by Owen Taylor
Modified: 2013-12-05 13:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ClutterStageCogl: Ignore a clip the size of the stage (1.94 KB, patch)
2013-12-05 13:11 UTC, Owen Taylor
committed Details | Review

Description Owen Taylor 2013-12-05 13:11:41 UTC
If the clip region includes the entire stage, ignore it - we aren't
actually clipped.
Comment 1 Owen Taylor 2013-12-05 13:11:43 UTC
Created attachment 263586 [details] [review]
ClutterStageCogl: Ignore a clip the size of the stage
Comment 2 Emmanuele Bassi (:ebassi) 2013-12-05 13:30:20 UTC
Review of attachment 263586 [details] [review]:

looks good to me.
Comment 3 Owen Taylor 2013-12-05 13:40:21 UTC
Attachment 263586 [details] pushed as cbb9d1e - ClutterStageCogl: Ignore a clip the size of the stage