ClutterStageCogl: Ignore a clip the size of the stage

If the clip region includes the entire stage, ignore it - we aren't
actually clipped.

https://bugzilla.gnome.org/show_bug.cgi?id=719901